Fix user info spacing

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,7 +46,7 @@ body {
 }
 
 .hydration{
-  background-color:#1982c4;
+  background-color: rgba(54, 162, 235, .7);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -73,3 +73,7 @@ body {
   padding-left: 125px;
 }
 
+.user-info {
+  display: flex;
+  flex-direction: column;
+}
